--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -70,23 +70,48 @@
 				fullscreenControl: false,
 			});
 			directionsService = new google.maps.DirectionsService();
-			directionsRenderer = new google.maps.DirectionsRenderer();
+			directionsRenderer = new google.maps.DirectionsRenderer({ suppressMarkers: true, map: map });
 			directionsRenderer.setMap(map);
 		}
 
-		function addMarkers(points) {
-			points.forEach((point) => {
-				const marker = new google.maps.Marker({
-					position: point.position,
-					map: map,
-					title: point.title,
-				});
-				const infoWindow = new google.maps.InfoWindow({
-					content: `<h3>${point.title}</h3><p>${point.description || ""}</p>`,
-				});
-				marker.addListener("click", () => {
-					infoWindow.open(map, marker);
-				});
+		function addMarkers(points, userLocation) {
+			if (points.length === 0) {
+				return;
+			}
+			let point = points[0];
+			const pharmacyIcon = {
+				url: '/static/icons/pharmacy-pointer.svg',
+				scaledSize: new google.maps.Size(50, 50),
+				origin: new google.maps.Point(0, 0),
+				anchor: new google.maps.Point(25, 25),
+			};
+			const marker = new google.maps.Marker({
+				position: point.position,
+				map: map,
+				title: point.title,
+				icon: pharmacyIcon,
+			});
+			const infoWindow = new google.maps.InfoWindow({
+				content: `<h3>${point.title}</h3><p>${point.address || ""}</p>`,
+			});
+			marker.addListener("click", () => {
+				infoWindow.open(map, marker);
+			});
+			
+
+			const userLocationIcon = {
+				url: '/static/icons/user-pointer.svg',
+				scaledSize: new google.maps.Size(50, 50),
+				origin: new google.maps.Point(0, 0),
+				anchor: new google.maps.Point(25, 25),
+			};
+
+			// Add a marker for the user's current location
+			const userLocationMarker = new google.maps.Marker({
+				position: userLocation,
+				map: map,
+				title: "Konumumu",
+				icon: userLocationIcon,
 			});
 		}
 
@@ -100,17 +125,16 @@
           <div class="pharmacy-item bg-primary-100 shadow-sm rounded p-4 flex flex-col md:flex-row items-start md:items-center justify-between">
             <div class="md:flex-grow">
               <p class="text-lg font-semibold mb-1">${pharmacy.title}</p>
-              <p class="text-sm text-gray-600">${pharmacy.address} (${pharmacy.distance}m away)</p>
+              <p class="text-sm text-gray-600">${pharmacy.address} (${pharmacy.distance} metre uzaklıkta)</p>
             </div>
             <div class="mt-2 md:mt-0 flex items-center space-x-3">
-              <span class="inline-block text-sm font-medium px-3 py-1 rounded
-                ${pharmacy.status === 'open' ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800'}">
-                ${pharmacy.status}
+              <span class="inline-block text-sm font-medium px-6 py-2 rounded bg-secondary border-2 border-secondary text-white">
+                ${pharmacy.status === 'open' ? 'Açık' : 'Nöbetçi'}
               </span>
               <a href="https://www.google.com/maps/dir/?api=1&destination=${pharmacy.position.lat},${pharmacy.position.lng}"
-                 class="inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 text-sm"
+                 class="inline-block px-6 py-2 bg-primary-100 text-secondary rounded border-2 border-secondary text-sm"
                  target="_blank">
-                Directions
+                Yol Tarifi
               </a>
             </div>
           </div>
@@ -232,7 +256,7 @@
 					fetchPharmacyPoints(userLocation, "eskisehir", function (result) {
 						if (result) {
 							const points = result.points;
-							addMarkers(points);
+							addMarkers(points, userLocation);
 							updatePharmacyList(points);
 							attachHammerSwipeEvents();
 							showDirectionsToNearestMarker(points, userLocation);
