--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -55,6 +55,7 @@
 		let directionsRenderer;
 		// Track whether the list is expanded or collapsed
 		let isExpanded = false;
+		let userLocation;
 
 		function initMap(center = { lat: 40.7128, lng: -74.0060 }) {
 			map = new google.maps.Map(document.getElementById("map"), {
@@ -63,25 +64,28 @@
 				// Disable all default UI controls
 				disableDefaultUI: true,
 				// Optional: Disable zoom/pan gestures
-				{% comment %} gestureHandling: "none", {% endcomment %}
-		// Optional: Disable remaining individual controls
-		zoomControl: false,
-			mapTypeControl: false,
+				// Optional: Disable remaining individual controls
+				zoomControl: false,
+				mapTypeControl: false,
 				scaleControl: false,
-					streetViewControl: false,
-						rotateControl: false,
-							fullscreenControl: false,
+				streetViewControl: false,
+				rotateControl: false,
+				fullscreenControl: false,
 			});
-		directionsService = new google.maps.DirectionsService();
-		directionsRenderer = new google.maps.DirectionsRenderer({ suppressMarkers: true, map: map });
-		directionsRenderer.setMap(map);
+			directionsService = new google.maps.DirectionsService();
+			directionsRenderer = new google.maps.DirectionsRenderer({ suppressMarkers: true, map: map });
+			directionsRenderer.setMap(map);
 		}
 
-		function addMarkers(points, userLocation) {
-			if (points.length === 0) {
-				return;
-			}
-			let point = points[0];
+		// Declare an array to keep track of all markers
+		let markersArray = [];
+
+		function addMarkers(point) {
+			// Remove all existing markers
+			markersArray.forEach(marker => marker.setMap(null));
+			markersArray = [];
+
+			// Pharmacy marker setup
 			const pharmacyIcon = {
 				url: '/static/icons/pharmacy-pointer.svg',
 				scaledSize: new google.maps.Size(50, 50),
@@ -94,6 +98,9 @@
 				title: point.title,
 				icon: pharmacyIcon,
 			});
+			markersArray.push(marker); // Add to tracking array
+
+			// Info Window for pharmacy marker
 			const infoWindow = new google.maps.InfoWindow({
 				content: `<h3>${point.title}</h3><p>${point.address || ""}</p>`,
 			});
@@ -101,21 +108,20 @@
 				infoWindow.open(map, marker);
 			});
 
-
+			// User location marker setup
 			const userLocationIcon = {
 				url: '/static/icons/user-pointer.svg',
 				scaledSize: new google.maps.Size(50, 50),
 				origin: new google.maps.Point(0, 0),
 				anchor: new google.maps.Point(25, 25),
 			};
-
-			// Add a marker for the user's current location
 			const userLocationMarker = new google.maps.Marker({
 				position: userLocation,
 				map: map,
 				title: "Konumumu",
 				icon: userLocationIcon,
 			});
+			markersArray.push(userLocationMarker); // Add to tracking array
 		}
 
 		function updatePharmacyList(pharmacies) {
@@ -134,11 +140,11 @@
               <span class="inline-block text-sm font-medium px-6 py-2 rounded bg-secondary border-2 border-secondary text-white">
                 ${pharmacy.status === 'open' ? 'Açık' : 'Nöbetçi'}
               </span>
-              <a href="https://www.google.com/maps/dir/?api=1&destination=${pharmacy.position.lat},${pharmacy.position.lng}"
-                 class="inline-block px-6 py-2 bg-primary-100 text-secondary rounded border-2 border-secondary text-sm"
-                 target="_blank">
-                Yol Tarifi
-              </a>
+			<button onclick="showDirectionsToPharmacy(${JSON.stringify(pharmacy).replace(/"/g, '&quot;')})"
+				class="inline-block px-6 py-2 bg-primary-100 text-secondary rounded border-2 border-secondary text-sm"
+				type="button">
+				Yol Tarifi
+			</button>
             </div>
           </div>
         `;
@@ -206,12 +212,11 @@
 			});
 		}
 
-		function showDirectionsToNearestMarker(points, userLocation) {
-			if (userLocation && points.length > 0) {
-				const nearestMarker = points[0];
+		function showDirectionsToMarker(point, userLocation) {
+			if (userLocation && point) {
 				const request = {
 					origin: new google.maps.LatLng(userLocation.lat, userLocation.lng),
-					destination: new google.maps.LatLng(nearestMarker.position.lat, nearestMarker.position.lng),
+					destination: new google.maps.LatLng(point.position.lat, point.position.lng),
 					travelMode: google.maps.TravelMode.DRIVING,
 				};
 				directionsService.route(request, (result, status) => {
@@ -229,7 +234,7 @@
 			if (navigator.geolocation) {
 				navigator.geolocation.getCurrentPosition(
 					(position) => {
-						const userLocation = {
+						userLocation = {
 							lat: position.coords.latitude,
 							lng: position.coords.longitude,
 						};
@@ -251,6 +256,16 @@
 			}
 		}
 
+		function showDirectionsToPharmacy(point) {
+			if (userLocation === null || point === null) {
+				return;
+			}
+			addMarkers(point, userLocation);
+			showDirectionsToMarker(point, userLocation);
+		}
+
+
+
 		// On page load
 		$(document).ready(function () {
 			getUserLocation(function (userLocation) {
@@ -259,10 +274,9 @@
 					fetchPharmacyPoints(userLocation, "eskisehir", function (result) {
 						if (result) {
 							const points = result.points;
-							addMarkers(points, userLocation);
 							updatePharmacyList(points);
 							attachHammerSwipeEvents();
-							showDirectionsToNearestMarker(points, userLocation);
+							showDirectionsToPharmacy(points[0]);
 						} else {
 							alert("No pharmacy points found.");
 						}
