--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -152,7 +152,7 @@
 						<div class="mt-2 md:mt-0 flex items-center space-x-3">
 						<span class="inline-block text-sm font-medium px-6 py-2 rounded
 									bg-secondary border-2 border-secondary text-white">
-							${pharmacy.status === 'open' ? 'Açık' : 'Nöbetçi'}
+							${pharmacy.status}
 						</span>
 						<button
 							onclick="showDirectionsToPharmacy(${JSON.stringify(pharmacy)
