--- a/theme/templates/pharmacies.html
+++ b/theme/templates/pharmacies.html
@@ -23,6 +23,16 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<!-- Hammer.js (CDN) -->
 	<script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5F4DN577T"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-Y5F4DN577T');
+	</script>
 </head>
 
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
